fixes screen overflow

--- a/src/components/button.module.css
+++ b/src/components/button.module.css
@@ -6,7 +6,18 @@
     border-radius: 5%;
     padding: 2vh 0;
     margin: 1.5vh 1vw;
-    font-size: 1vw;
+}
+
+@media (min-width: 750px){
+    .buttons{
+        font-size: 1vw;
+    }
+}
+
+@media (max-width: 750px){
+    .buttons{
+        font-size: 2vw;
+    }
 }
 
 .buttons:active {
